--- a/week06 Web Art/style.css
+++ b/week06 Web Art/style.css
@@ -10,6 +10,10 @@ img
 img:hover {
     opacity: 1;
    }
+#imagebox {
+    display: flex;
+    justify-content: center;
+}
 .images{
     height: 300px;
     padding: 20px 20px 20px 20px;
