--- a/week07/Lakers/style.css
+++ b/week07/Lakers/style.css
@@ -6,6 +6,10 @@
     width: 9%;
     filter:invert(100%)
 }
+
+*{
+    cursor:url(Champions/media/a.ico),auto;
+}
 .icon{
     position: absolute;
     right:20%;
@@ -52,6 +56,7 @@
     height: 10%;
     margin-top: 0.6%;
     margin-left: 8%;
+    margin-right: 8%;
     font-size: 250%;
     font-family: "The Font";
     text-decoration: none;
