--- a/style.css
+++ b/style.css
@@ -1,8 +1,40 @@
 a {
  font-size: 40px;
- color:green;
+ color:rgb(0, 0, 0);
 }
 
 body {
-  text-align: center;  
+  background: url(img/bg.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+  text-align: center;
+}
+
+#title{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: center;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+p{
+  background-color:rgba(0,0,0,0.7);
+  width: max-content;
+  border-radius: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: 20px;
+}
+
+#images{
+  width:60%;
+}
+
+.carousel-indicators{
+  background-color: rgba(0,0,0,0.7);
+  width: max-content;
+  margin: auto;
+  margin-bottom: 7px;
+  border-radius: 5px;
+  padding: 5px;
 }
