--- a/final/style.css
+++ b/final/style.css
@@ -7,15 +7,23 @@ body{
     background-color: grey;
 }
 #carouselExampleCaptions{
-    width: 55%;
+    width: 100%;
     margin: auto;
-    margin-top: 2%;
+
 }
 
+#caption > h5{
+    color:white;
+    -webkit-text-stroke: 2px black; 
+    font-size: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+}
 #caption{
-    color: black;
-    text-shadow:0 0 3px white;
-    font-size: 20px;
+    position:fixed;
+    color:white;
+    -webkit-text-stroke: 2px black; 
+    font-size: 35px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #images{
@@ -26,5 +34,13 @@ body{
 #images > div{
     margin: 4%;
     width:100%;
+}
+
+#arrows{
+    position:fixed;
+}
+
+#indicators{
+    position:fixed
 }
 
